Fixed small bugs for hosted site on mobile

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -104,4 +104,8 @@
     width: 4px;
     height: 4px;
   }
+
+  .mainContainer {
+    height: 80vh;
+  }
 }
